tests/suite/snapshots/suite__check__tests__check__bad_length_3.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_length_3.xi:2:14]
   │
 2 │     x:bool = length({})
   ·     ───┬──   ─────┬────  
   ·        ╰───────────────── Expected bool because of this
   ·                   │      
   ·                   ╰────── Expected bool but found int
───╯

